@@ -1,3 +1,7 @@
+2007-12-23  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/oraconf.rb: fix for official x86_64 rpms.
+	    (contributed by Pat.)
+
 2007-12-04  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/stmt.c, lib/oci8/oci8.rb: delete a private method
 	    OCI8::Curosr#__connection and use @con instead.
